@@ -1,3 +1,9 @@
+2008-07-04  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test_input/test86.py:
+	  Add a test for except KeyboardInterrupt, which was fixed by Neil
+	  in pychecker/CodeChecks.py: 1.170 on 23-Apr-07.
+
 2008-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
